# transcription

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
assets/media/: memo.txt
assets/texts/: memo.txt
src/: __init__.py  ui.py
src/libs/: transcription.py
